# WattBroker

./: .gitignore  Changelog.md  DEBUGGING.csv  Prediction.cu  README.md  Test.cu  identifier.sqlite  pom.xml
src/main/java/: CustomHttpRequest.java  Main.java  Prediction.java  SolarFarm.java  TimePeriod.java  Weather.java  WindFarm.java  _PV_SOLAR_FARMS.csv  module-info.java  util.java
src/main/java/ECC/: ECC.java  Encoder.java  Helpers.java
src/main/java/Server/: Main.java
src/main/java/aemo/api_testing/: AEMOApiClient.java  Main.java
src/main/java/com/: Prediction.java
src/main/java/com/util/: CustomHttpRequest.java  EmailNotification.java  algorithmFileReader.java  util.java
src/main/java/com/wattbroker/wattbroker/: AEMO.java  API_INFO.java  AlgorithmFileReader.java  Algorithms.java  DB_query.java  Data.java  FakeMain.java  GradientColorMapping.java  Graph.java  HOTSPOTS.java  Hash.java  HelloController.java  LargeGraph.java  Login.java  Main.java  Map.java  SVG_Testing.java  SearchBar.java  Settings_list.md  SmallGraph.java  StateOverlay.java  ToggleData.java  ToggleMenu.java  ToggleMenuTest.java  UI_Controller.java  User.java  UserProfile.java  WattBroker.java  fakeDataBuilder.java  large_graph_type.java  loginController.java  test.java  toggleable.java
src/main/java/org/etrade/: Algo_Run.java  Equations.md  Prediction.java  SolarFarm.java  TimePeriod.java  UsagePredictions.java  Weather.java  WindFarm.java
src/main/resources/com/wattbroker/wattbroker/: Account.fxml  AccountNavMenu.fxml  (+32 more)
src/raw_pred_mac/: CMakeLists.txt  _PV_SOLAR_FARMS.csv  main.cpp
(+51 files in other folders)
